Updated references for images

--- a/Minesweeper/app/src/main/res/values/strings.xml
+++ b/Minesweeper/app/src/main/res/values/strings.xml
@@ -28,8 +28,8 @@
 
 
     <string-array name="thank_you">
-        <item>http://code.tutsplus.com/tutorials/animate-a-cartoon-explosion-with-flash-professional-basix#8212active-9495</item>
-        <item>http://funny-pictures.picphotos.net/aqua-smiles-xp-icons/freeiconsdownload.com*site-images*too_big*aqua-smiles-xp.jpg/</item>
+        <item>http://code.tutsplus.com/tutorials/animate-a-cartoon-explosion-with-flash-professional-basix--active-9495</item>
+        <item>http://all-free-download.com/free-icon/icons-sets/aqua_smiles_xp_icons_icons_pack_120593.html</item>
         <item>http://www.freepik.com/free-vector/golden-medals-and-trophies-vector_719921.htm</item>
         <item>http://imgbuddy.com/tick-cross-icon-png.asp</item>
     </string-array>
